--- a/apps/web/src/index.html
+++ b/apps/web/src/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <title>OpenMobTimer</title>
-        <base href="/" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    </head>
-    <body>
-        <open-mob-timer-v2-root></open-mob-timer-v2-root>
-    </body>
+
+<head>
+    <meta charset="utf-8" />
+    <title>OpenMobTimer</title>
+    <base href="/" />
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1" />
+    <link rel="icon"
+          type="image/x-icon"
+          href="favicon.ico" />
+</head>
+
+<body>
+    <omt-root></omt-root>
+</body>
+
 </html>
